24/04/17 테이블 태그 과제 수정본

--- a/table01.html
+++ b/table01.html
@@ -4,22 +4,17 @@
     <body>
         <table border="1">
             <tr>
-                <td colspan = "3">나라별 홍차</td>
+                <th colspan="2">지역별 홍차</th>
             </tr>
             <tr>
-                <td = rowspan="4", colspan="2"> 중국 </td>
-            </tr> 
-            <tr>
-                 <td>정산소종  </td>
-            </tr>   
-            <tr>
-                <td> 기문</td>
+                <th rowspan="2" > 중국 </th>
+                <td>정산소종</td>
             </tr>
             <tr>
-                <td> 운남</td>
+                <td>기문</td>
             </tr>
             <tr>
-                <td rowspan="4", colspan="2">인도 및 스리랑카</td>
+                <th rowspan = "3">인도 및 스리랑카</th>
                 <td>아삼</td>
             </tr>
             <tr>
@@ -28,11 +23,6 @@
             <tr>
                 <td>다질링</td>
             </tr>
-            <tr>
-                <td>닐기리</td>
-            </tr>
-                     
-               
         </table>
     </body>
     <meta charset="UTF-8">
